fix z-index hash

--- a/wp-content/themes/dev-rest-rasta/style.scss
+++ b/wp-content/themes/dev-rest-rasta/style.scss
@@ -502,7 +502,7 @@ $bgc-secondary: #f5f5f5;
       height: 4rem;
       position: relative;
       top: 6rem;
-      z-index: 10;
+      z-index: 6;
    }
    &__title {
       @include font-title-page();
